Use Forecast.io for weather forecasting
Switch to The Dark Sky Forecast API v2 (close #1) for better data.
Also add a license and a readme

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Project specific
+# =========================
+# Don't commit your config file!
+config.json
