--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Jean-Baptiste Richardet",
   "license": "MIT",
   "dependencies": {
-    "moment": "^2.10.3",
-    "request": "^2.58.0"
+    "forecast.io-bluebird": "0.0.1"
   }
 }
