Add Twitter integration
Huddy can now retrieve the last 3 tweets from a designated Twitter account and show their content.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "description": "Heads up display for day to day informations",
   "main": "index.js",
+  "repository": "https://github.com/JbIPS/Huddy",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jean-Baptiste Richardet",
   "license": "MIT",
   "dependencies": {
-    "forecast.io-bluebird": "0.0.1"
+    "forecast.io-bluebird": "0.0.1",
+    "twitter": "^1.2.5"
   }
 }
