Refacto with classes & promises
Create a class in a separated file for each update providers.
The index will just be used for formatting inputs.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jean-Baptiste Richardet",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.32",
     "forecast.io-bluebird": "0.0.1",
     "twitter": "^1.2.5"
   }
